<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gosuncn.zfyfw.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/nv_write"
        android:orderInCategory="100"
        android:title="@string/nv_write" />
    <item
        android:id="@+id/nv_read"
        android:orderInCategory="100"
        android:title="@string/nv_read" />
    <item
        android:id="@+id/set_lock_passwd"
        android:orderInCategory="100"
        android:title="@string/set_lock_passwd" />
    <item
        android:id="@+id/rm_lock_passwd"
        android:orderInCategory="100"
        android:title="@string/rm_lock_passwd" />

</menu>
