<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/set_lock_passwd"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/set_lock_passwd"
            android:gravity="center"/>
        <TextView
            android:id="@+id/rm_lock_passwd"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/rm_lock_passwd"
            android:gravity="center" />

        <TextView
            android:id="@+id/nv_read"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/nv_read"
            android:gravity="center"/>
        <TextView
            android:id="@+id/nv_write"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/nv_write"
            android:gravity="center" />

    </LinearLayout>


</FrameLayout>